--- a/sagenb/data/sage/html/base_authenticated.html
+++ b/sagenb/data/sage/html/base_authenticated.html
@@ -15,8 +15,10 @@
         <li><a title="{{ gettext('View a log of recent computations') }}" href="#" onClick="history_window()">{{ gettext('Log') }}</a></li>
         {% endif %}
         <li><a title="{{ gettext('Change account settings including password') }}" href="/settings">{{ gettext('Settings') }}</a></li>
+<!-- Remove two buttons
         <li><a title="{{ gettext('Documentation') }}" href="#" onClick="help()">{{ gettext('Help') }}</a></li>
         <li><a title="{{ gettext('Report a problem or submit a bug to improve Sage') }}" href="#" onClick="bugreport()">{{ gettext('Report a Problem') }}</a></li>
+-->
         <li><a title="{{ gettext('Log out of the Sage notebook') }}" href="/logout">{{ gettext('Sign out') }}</a></li>
         {% endif %}
     </ul>
