--- a/sagenb/data/sage/html/base.html
+++ b/sagenb/data/sage/html/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>{{ render_title() }} -- Sage</title>
+        <title>{{ render_title() }} -- AHI</title>
         {% block more_meta %}{% endblock %}
 	{% block published_link_rel %}{% endblock %}
         {% block pre_main_css %}{% endblock %}
